<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/SubmitButtonMain"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="97dp"
            android:layout_marginEnd="98dp"
            android:background="#224F71"
            android:onClick="clickFunction"
            android:text="Submit"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>